# olympiad-ineq

./: .gitignore  decision.md  generate.py  generate.sh  generate_v100.sh  input.txt  main.py  pyproject.toml  script.sh  script_v100.sh
configs/: config.yaml  config_v100_test.yaml  generate.yaml
configs/data_gen/: full.yaml  small.yaml
configs/prompt_source/: explicit.yaml  template.yaml
src/data_gen/: __init__.py  client.py  io.py  models.py  orchestrator.py  prompt_source.py  validation.py
tests/: test_config.py  test_data_gen.py  test_generate.py  test_generate_script.py  test_gpu_integration.py  test_output_directory.py  test_progress_logging.py  test_validation.py  test_vllm_client.py
